--- a/resources/input/example/categories.yaml
+++ b/resources/input/example/categories.yaml
@@ -2,7 +2,7 @@
   category: Media
   recipient-keywords:
     - SPOTIFY
-    - GEZ
+    - Rundfunk ARD, ZDF, DRadio
     - Netflix
     - AUDIBLE
   reference-keywords:
@@ -33,6 +33,8 @@
 -
   category: Shopping
   recipient-keywords:
+    - AMAZON
+    - PayPal
   reference-keywords:
     - ZALANDOSE
 
